# agentic-sdlc-for-finetuning

./: .dockerignore  .env.docker.example  .env_example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  Taskfile.yml  agent_py_finetuning.jsonl  coder_py_finetuning.jsonl  docker-compose.yml  llm_config_finetuning.jsonl  logging_config_finetuning.jsonl  main.py  planner_py_finetuning.jsonl  pyproject.toml  python_coding_agent_finetuning.jsonl  read_file_finetuning.jsonl  read_file_structure_py_finetuning.jsonl  reviewer_py_finetuning.jsonl  static_check_py_finetuning.jsonl  training_data.jsonl
docs/: tracker.xlsx  ~$tracker.xlsx
docs/Feature_Implementation_docs/: donwload_execution.md
docs/LLMOPS_docs/: LLMOPS_disucssion.md  Phase1_Docker_Compose.md  Phase1_taskfile_yml_usage.md  Phase2_Celery_Redis.md
src/config/: llm_config.py  logging_config.py
src/tools/: read_file.py  read_file_structure.py
training_data/: training_data_ab.jsonl  training_data_final_v8.jsonl  training_data_final_v8_without_system_prompt.jsonl  training_data_final_v9_combined_training.jsonl  training_data_kvk.jsonl  training_data_pb.jsonl  training_data_ru.jsnol
ui/: .env.local  README.md  package-lock.json  package.json  tailwind.config.js  web_agents_router.py
ui/app/: globals.css  layout.tsx
ui/lib/: api.ts  chat-types.ts  hooks.ts  time.ts  types.ts
web/: alembic.ini  database.py  main.py
web/agents/: router.py
web/alembic/: 0001_create_executions_table.py  env.py
web/docs/: database.md  main.md
web/executions/: crud.py  models.py  router.py  schemas.py
(+91 files in other folders)
